Removed small code smells